--- a/src/main/resources/log4j2.xml.3
+++ b/src/main/resources/log4j2.xml.3
@@ -2,11 +2,10 @@
 <Configuration>
     <Appenders>
         <Console name="CONSOLE_OUT">
-        	<PatternLayout pattern="%d %p %m %n"/>
         </Console>
     </Appenders>
     <Loggers>
-        <Root level="info">
+        <Root>
             <AppenderRef ref="CONSOLE_OUT"/>
         </Root>
     </Loggers>
